# Computer-simulation

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Chain.cpp  Graph.cpp  Selection.cpp  Tree.cpp  chain.cpp  graph.cpp  graph.h  queueing_system.cpp  queueing_system.h  selection.cpp  selection.h  tree.cpp  tree.h
src/headers/: Chain.h  Graph.h  Selection.h  Tree.h
